@@ -1,7 +1,6 @@
 TODO
 ----
 
-	* Need to distinguish between static and instance things
 	* Add options like /show-private. For example, if you view System.String
 	  you should only see public methods etc unless you specify /private. Similar
 	  thing for other scope things.
@@ -9,7 +8,6 @@ TODO
 	* Support for params (show the params keyword)
 	* Support for out (it shows as ref)
 	* Handle interfaces:
-		* public class Foo : Blah, IBar
 		* handle explicit vs. implicit impl
 	* Show virtual/override?
 	* Fields
